--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./js/index.js"></script>
+    <link rel="shortcut icon" href="./assets/hand-scissors-regular.svg" type="image/x-icon">
     <title>JavaScript Project p1</title>
 </head>
+
 <body>
     <script src="./js/index.js"></script>
 </body>
+
 </html>
